--- a/formularioCovid.html
+++ b/formularioCovid.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario de registro</title>
-    <link href="estiloForm.css" rel="stylesheets">
+    <link rel="stylesheet" href="/estiloForm.css">
 </head>
 <body>
     <h1>Registro para vacunacion COVID-19 </h1>
